nueva version con nuevos componentes

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ROM Conformidad de Incentivos</title>
+  <title>Certificador</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon"  href="./assets/img/isotipo-rom.ico">
@@ -13,5 +13,11 @@
 <body>
   <app-root></app-root>
   <script src="https://kit.fontawesome.com/eedfeef8e9.js" crossorigin="anonymous"></script>
+  <div class="mi-contenedor">
+  
+</div>
+
+
+
 </body>
 </html>
